# first

first/: CDist.cpp  CDist.hpp  CMakeCache.txt  CMakeLists.txt  CPCD.hpp  CPoint.cpp  CPoint.hpp  CPoint_CDist.cpp  Header.hpp  autotest.cpp  main.cpp
first.xcodeproj/: project.pbxproj
first.xcodeproj/xcuserdata/artemijdanilov.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
